; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_metaslab.c_metaslab_block_find.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_metaslab.c_metaslab_block_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i64, i64, i32*)* @metaslab_block_find to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @metaslab_block_find(i32* %0, i32* %1, i64 %2, i64 %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  store i32* %4, i32** %10, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load i64, i64* %8, align 8
  %15 = call i32 @rs_set_start(i32* %12, i32* %13, i64 %14)
  %16 = load i32*, i32** %7, align 8
  %17 = load i64, i64* %8, align 8
  %18 = load i64, i64* %9, align 8
  %19 = add nsw i64 %17, %18
  %20 = call i32 @rs_set_end(i32* %12, i32* %16, i64 %19)
  %21 = load i32*, i32** %6, align 8
  %22 = load i32*, i32** %10, align 8
  %23 = call i32* @zfs_btree_find(i32* %21, i32* %12, i32* %22)
  store i32* %23, i32** %11, align 8
  %24 = load i32*, i32** %11, align 8
  %25 = icmp eq i32* %24, null
  br i1 %25, label %26, label %31

26:                                               ; preds = %5
  %27 = load i32*, i32** %6, align 8
  %28 = load i32*, i32** %10, align 8
  %29 = load i32*, i32** %10, align 8
  %30 = call i32* @zfs_btree_next(i32* %27, i32* %28, i32* %29)
  store i32* %30, i32** %11, align 8
  br label %31

31:                                               ; preds = %26, %5
  %32 = load i32*, i32** %11, align 8
  ret i32* %32
}

declare dso_local i32 @rs_set_start(i32*, i32*, i64) #1

declare dso_local i32 @rs_set_end(i32*, i32*, i64) #1

declare dso_local i32* @zfs_btree_find(i32*, i32*, i32*) #1

declare dso_local i32* @zfs_btree_next(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
